--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <header>
@@ -28,9 +36,8 @@
         <h2>Cotizá tu Seguro de Caución</h2>
         <div class="cards-container">
           <div class="card card-green">
-            <span class="icon"></span>
             <img
-              src="triunfo-logo.png"
+              src="./assets/images/logo-TS.png"
               alt="Triunfo Seguros Logo"
               class="company-logo"
             />
@@ -44,8 +51,11 @@
             <button>COTIZAR</button>
           </div>
           <div class="card card-blue">
-            <span class="icon"></span>
-            <img src="bbva-logo.png" alt="BBVA Logo" class="company-logo" />
+            <img
+              src="./assets/images/logo-BBVA.svg"
+              alt="BBVA Logo"
+              class="company-logo"
+            />
             <p>
               Brinda una garantía al propietario ante las obligaciones
               contraídas por el inquilino en el alquiler de viviendas
@@ -59,9 +69,8 @@
             <button>COTIZAR</button>
           </div>
           <div class="card card-purple">
-            <span class="icon"></span>
             <img
-              src="sancor-logo.png"
+              src="./assets/images/logo-GSS.png"
               alt="Sancor Seguros Logo"
               class="company-logo"
             />
@@ -136,6 +145,14 @@
         <button type="submit">Enviar</button>
       </form>
     </section>
+    <a
+      href="https://wa.me/549XXXXXXXXX"
+      class="whatsapp-float"
+      target="_blank"
+      aria-label="Contactar por WhatsApp"
+    >
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
     <footer>
       <p>📍 Mendoza 556, Río Cuarto, Córdoba</p>
       <div class="footer-icons">
