se modifico titulo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <section class="hero" id="home">
       <div class="overlay">
-        <h2>Cotizá tu Seguro de Caución</h2>
+        <h2>Cotizá tu Seguro de Caución papi</h2>
         <div class="cards-container">
           <div class="card card-green">
             <img
