trayendo cambios de marti

--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
+
   <body>
     <header>
       <nav class="navbar">
         <div class="logo">
           <img
-            src="./assets/images/Logo Grupo Scoppa.ai"
-            width="150"
+            src="./assets/images/Logo GS 2.png"
+            width="50"
             height="75"
             alt="Grupo Scoppa Logo"
           />
         </div>
       </nav>
     </header>
+
     <div>
       <section class="hero" id="home">
         <div class="overlay">
@@ -44,12 +46,10 @@
                 class="company-logo"
               />
               <p>
-                Garantías de obras, suministros y/o servicios públicos o
-                privados, garantías judiciales, garantía de alquileres,
-                garantías aduaneras, garantías de tenencia, garantías registro
-                de importadores / exportadores, desempeño de una actividad o
-                profesión, agencias de viajes y turismo, expendedores de
-                combustibles
+                El Seguro de Caución se emite para asegurar el cumplimiento en tiempo 
+                y forma de una obligación que surge de la firma de un contrato, 
+                cuando el Beneficiario de dicha obligación deja expresado en el mismo que el Tomador 
+                (o sujeto obligado) garantice el cumplimiento..
               </p>
             </div>
 
@@ -60,17 +60,13 @@
                 class="company-logo"
               />
               <p>
-                Brinda una garantía al propietario ante las obligaciones
-                contraídas por el inquilino en el alquiler de viviendas
-                particulares, como asi también permite reemplazar o suplir la
-                garantía de un título de propiedad inmueble. Es por esto que
-                actúa favorablemente tanto para el inquilino como para el
-                propietario. La póliza también le otorga al propietario
-                cobertura ante el incumplimiento por parte del inquilino del
-                pago del alquiler, expensas, servicios o impuestos, y también
-                por ocupación indebida.
+                Este seguro brinda una garantía al propietario ante las obligaciones del inquilino en el alquiler de viviendas particulares, 
+                como así también permite reemplazar o suplir la garantía de un título de propiedad inmueble, 
+                que se suele solicitar al momento de la firma del contrato.
               </p>
+
             </div>
+
             <div class="card card-purple">
               <img
                 src="./assets/images/logo-GSS.png"
@@ -78,23 +74,26 @@
                 class="company-logo"
               />
               <p>
-                Contamos con un equipo de Asesores de Seguros altamente
-                capacitado e identificado con nuestra marca, orientado a
-                brindarte soluciones a medida para tu empresa.
+                El seguro de caución de alquiler es una garantía de alquiler para vivienda de uso familiar, 
+                asegurando tranquilidad al propietario y al inquilino.
               </p>
+              
             </div>
+
           </div>
+
           <button onclick="openPopup()">COTIZAR</button>
         </div>
       </section>
+
       <section class="insurance-info" id="services">
+
         <h2 class="emphasized-title">Acerca de Seguros de Caución</h2>
         <p>
-          Los seguros de caución garantizan el cumplimiento de obligaciones en
-          contratos, alquileres y proyectos. Son una garantia de alquiler para
-          vivienda de uso familiar asegurando tranquilidad al propietario y al
-          inquilino
+          Los seguros de caución garantizan el cumplimiento de obligaciones en contratos, alquileres y proyectos. 
+          Son una garantia de alquiler para vivienda de uso familiar asegurando tranquilidad al propietario y al inquilino
         </p>
+
         <ul>
           <li>
             <strong>Obras y Servicios:</strong> Garantías para proyectos
@@ -109,7 +108,8 @@
             legales y comerciales.
           </li>
         </ul>
-        <h3 class="emphasized-title">Beneficios</h3>
+
+        <h2 class="emphasized-title">Beneficios</h3>
         <p class="benefits-subtitle">100% claros y sin letra chica</p>
         <div class="benefits-container">
           <div class="benefit-card">
@@ -127,7 +127,8 @@
             <p>Un asesor/a te acompañará en el proceso. Trámite 100% Online.</p>
           </div>
         </div>
-        <h3 class="emphasized-title">Requisitos</h3>
+
+        <h2 class="emphasized-title">Requisitos</h3>
         <ul class="requirements-list">
           <li>+ DNI emitido en Argentina</li>
           <li>+ Ingresos demostrables</li>
@@ -139,6 +140,7 @@
           plataforma online!
         </p>
       </section>
+
       <section class="contact" id="contact">
         <h2 class="emphasized-title">Contacto</h2>
         <form>
@@ -149,6 +151,7 @@
           <button type="submit">Enviar</button>
         </form>
       </section>
+
       <a
         href="https://wa.me/549XXXXXXXXX"
         class="whatsapp-float"
@@ -157,6 +160,7 @@
       >
         <i class="fa-brands fa-whatsapp"></i>
       </a>
+
       <footer>
         <p>📍 Mendoza 556, Río Cuarto, Córdoba</p>
         <div class="footer-icons">
@@ -231,5 +235,6 @@
 
       <script src="scripts.js"></script>
     </div>
+
   </body>
 </html>
