fix: centrado de elementos

--- a/index.html
+++ b/index.html
@@ -88,29 +88,32 @@
 
       <section class="insurance-info" id="services">
 
-        <h2 class="emphasized-title">Acerca de Seguros de Caución</h2>
-        <p>
-          Los seguros de caución garantizan el cumplimiento de obligaciones en contratos, alquileres y proyectos. 
-          Son una garantia de alquiler para vivienda de uso familiar asegurando tranquilidad al propietario y al inquilino
-        </p>
-
-        <ul>
-          <li>
-            <strong>Obras y Servicios:</strong> Garantías para proyectos
-            públicos y privados.
-          </li>
-          <li>
-            <strong>Alquileres:</strong> Seguridad para propietarios e
-            inquilinos.
-          </li>
-          <li>
-            <strong>Judiciales y Aduaneras:</strong> Cobertura para trámites
-            legales y comerciales.
-          </li>
-        </ul>
+        <div class="about-container">
+          <h2 class="emphasized-title">Acerca de Seguros de Caución</h2>
+          <p>
+            Los seguros de caución garantizan el cumplimiento de obligaciones en contratos, alquileres y proyectos.
+            Son una garantia de alquiler para vivienda de uso familiar asegurando tranquilidad al propietario y al inquilino
+          </p>
+          <div class="list">
+            <ul>
+              <li>
+                <strong>Obras y Servicios:</strong> Garantías para proyectos
+                públicos y privados.
+              </li>
+              <li>
+                <strong>Alquileres:</strong> Seguridad para propietarios e
+                inquilinos.
+              </li>
+              <li>
+                <strong>Judiciales y Aduaneras:</strong> Cobertura para trámites
+                legales y comerciales.
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <h2 class="emphasized-title">Beneficios</h3>
-        <p class="benefits-subtitle">100% claros y sin letra chica</p>
+        <p>100% claros y sin letra chica</p>
         <div class="benefits-container">
           <div class="benefit-card">
             <h4>Agilidad de otorgamiento</h4>
@@ -129,7 +132,7 @@
         </div>
 
         <h2 class="emphasized-title">Requisitos</h3>
-        <ul class="requirements-list">
+        <ul class="list">
           <li>+ DNI emitido en Argentina</li>
           <li>+ Ingresos demostrables</li>
           <li>+ Sin antecedentes negativos en el sistema financiero</li>
