Corrección de espacios

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
         </div>
 
-        <h2 class="emphasized-title">Beneficios</h3>
+        <h2 class="emphasized-title">Beneficios</h2>
         <p>100% claros y sin letra chica</p>
         <div class="benefits-container">
           <div class="benefit-card">
@@ -131,22 +131,22 @@
           </div>
         </div>
 
-        <h2 class="emphasized-title">Requisitos</h3>
+        <h2 class="emphasized-title">Requisitos</h2>
         <ul class="list">
 
-          <li>+ DNI emitido en Argentina</li>
-          <li>+ Ingresos demostrables</li>
-          <li>+ Sin antecedentes negativos en el sistema financiero</li>
-          <li>+ Posible información adicional</li>
+          <li>DNI emitido en Argentina</li>
+          <li>Ingresos demostrables</li>
+          <li>Sin antecedentes negativos en el sistema financiero</li>
+          <li>Posible información adicional</li>
         </ul>
-        <p>
+        <p class="renglon"><b> 
           ¡Cotizá tu seguro de caución de manera rápida y segura con nuestra
           plataforma online!
-        </p>
+        </b></p>
       </section>
 
       <section class="contact" id="contact">
-        <h2 class="emphasized-title">Contacto</h2>
+        <h3>Contacto</h3>
         <form>
           <input type="text" placeholder="Nombre y apellido" required />
           <input type="email" placeholder="Email" required />
@@ -166,7 +166,7 @@
       </a>
 
       <footer>
-        <p>📍 Mendoza 556, Río Cuarto, Córdoba</p>
+        <a href="https://maps.app.goo.gl/CydH5jNz1qAMTF5V9" target="_blank">📍 Mendoza 556, Río Cuarto, Córdoba</a>
         <div class="footer-icons">
           <span
             ><a href="mailto:info@gruposcoppa.com.ar"
