fix: centrado de listas

--- a/index.html
+++ b/index.html
@@ -93,21 +93,23 @@
             Los seguros de caución garantizan el cumplimiento de obligaciones en contratos, alquileres y proyectos.
             Son una garantia de alquiler para vivienda de uso familiar asegurando tranquilidad al propietario y al inquilino
           </p>
-          <div class="list">
-            <ul>
-              <li>
-                <strong>Obras y Servicios:</strong> Garantías para proyectos
-                públicos y privados.
-              </li>
-              <li>
-                <strong>Alquileres:</strong> Seguridad para propietarios e
-                inquilinos.
-              </li>
-              <li>
-                <strong>Judiciales y Aduaneras:</strong> Cobertura para trámites
-                legales y comerciales.
-              </li>
-            </ul>
+          <div class="list-container">
+            <div class="list">
+              <ul>
+                <li>
+                  <strong>Obras y Servicios:</strong> Garantías para proyectos
+                  públicos y privados.
+                </li>
+                <li>
+                  <strong>Alquileres:</strong> Seguridad para propietarios e
+                  inquilinos.
+                </li>
+                <li>
+                  <strong>Judiciales y Aduaneras:</strong> Cobertura para trámites
+                  legales y comerciales.
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -131,14 +133,17 @@
           </div>
         </div>
 
-        <h2 class="emphasized-title">Requisitos</h2>
-        <ul class="list">
-
-          <li>DNI emitido en Argentina</li>
-          <li>Ingresos demostrables</li>
-          <li>Sin antecedentes negativos en el sistema financiero</li>
-          <li>Posible información adicional</li>
-        </ul>
+        <h2 class="emphasized-title">Requisitos</h3>
+        <div class="list-container">
+          <div class="list">
+            <ul>
+              <li>DNI emitido en Argentina</li>
+              <li>Ingresos demostrables</li>
+              <li>Sin antecedentes negativos en el sistema financiero</li>
+              <li>Posible información adicional</li>
+            </ul>
+          </div>
+        </div>
         <p class="renglon"><b> 
           ¡Cotizá tu seguro de caución de manera rápida y segura con nuestra
           plataforma online!
