contact & wsp fixes

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </section>
 
       <a
-        href="https://wa.me/549XXXXXXXXX"
+        href="https://wa.me/5493584623267?text=¡Hola! ¿Me podrían dar más información?"
         class="whatsapp-float"
         target="_blank"
         aria-label="Contactar por WhatsApp"
