diferenciación de tipos de seguro

--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
               <option value="24">24 meses</option>
               <option value="36">36 meses</option>
             </select>
+            <select id="tipo" required>
+              <option value="">Tipo de contrato</option>
+              <option value="particular">Particular</option>
+              <option value="comercial">Comercial</option>
+            </select>
             <button type="submit">Calcular</button>
           </form>
           <div id="resultado" class="resultado"></div>
