--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <script src="scripts.js"></script>
   </head>
 
   <body>
@@ -29,6 +30,12 @@
             height="75"
             alt="Grupo Scoppa Logo"
           />
+        </div>
+        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+        <div class="nav-links" id="nav-links">
+          <a href="#home">Inicio</a>
+          <a href="#services">Servicios</a>
+          <a href="#contact">Contacto</a>
         </div>
       </nav>
     </header>
