--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
   </head>
 
   <body>
@@ -31,11 +31,14 @@
             alt="Grupo Scoppa Logo"
           />
         </div>
-        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <div class="nav-links" id="nav-links">
-          <a href="#home">Inicio</a>
-          <a href="#services">Servicios</a>
-          <a href="#contact">Contacto</a>
+        <div class="menu-abrir" id="menu-abir">&#9776;</div>
+        <div class="nav" id="nav">
+          <div class="menu-cerrar" id="menu-cerrar">&#9776;</div>
+          <div class="nav-links" id="nav-links">
+            <a href="#home">Inicio</a>
+            <a href="#services">Servicios</a>
+            <a href="#contact">Contacto</a>
+          </div>
         </div>
       </nav>
     </header>
@@ -242,7 +245,6 @@
         </div>
       </div>
 
-      <script src="scripts.js"></script>
     </div>
 
   </body>
